mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:7-jammy
        resources:
          limits:
            memory: "252Mi"
            cpu: "1000m"
        ports:
        - containerPort: 27017
---

apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  selector:
    app: mongodb
  ports:
  - port: 27017
    targetPort: 27017
    protocol: TCP
